<resources>

    <string name="bienvenida">Bienvenido</string>
    <string name="inicio">Descubrenos</string>
    <string name="bienvenidausuario">Bienvenido</string>

    <string name="app_name">MiPueblo</string>

    <string name="nombre_pueblo">CHINACOTA</string>
    <string name="bt_hoteles">Hoteles</string>
    <string name="bt_restaurantes">RESTAURANTES</string>
    <string name="bt_sitios">SITIOS TURISTICOS</string>

    <string name="btn_verMas">Ver mas</string>

    <string name="titulo_hoteles">DESCUBRE NUESTROS HOTELES</string>
    <string name="descripcionHoteles">
        En Chinacota encontraras hoteles y parques agradables para cad uno de los
        miembros de tu familia y amigos.

        Al ser un lugar tan turistico contaras con un hospedaje con un excelente servicio y diponibilidad para
        brindarte la mejor comodidad y que disfrutes de tus vacaciones con un hospedaje hecho para
        tí.
    </string>

    <string name="titulo_restaurantes">QUE SE TE ANTOJA HOY ???</string>
    <string name="descripcionRestaurantes">
        En Chinacota encontraras nuevas experiencias con tu paladar pues tienes
        que animarte a probar la diversidad gastronomica de este hermoso lugar.

        Algunos de sus delicias gratronomicas son:
        * Cacaitos chitareros: Este es un dulce derivado de la panela que junto con
        otros ingredientes forman uno de los dulces mas consumido por la población
        lugareña.
    </string>

    <string name="titulo_sitios">UN LUGAR POR CONOCER</string>
    <string name="descripcionSitios">
        Bienvenido a chinacota un pueblo muy acogedor para ti y tu familia,
        lleno de muchos lugares por conocer disfruta de su clima en la parte de
        cabecera del publo conocido como iscala, alli pordar gener un camping con tus
        amigos y disfrutar de sus verdes montañas.
    </string>

    <string name="opcion1">Español</string>
    <string name="opcion2">ingles</string>
    <string name="opcion3">italiano</string>
    <string name="opcion4">acerca de</string>

    <!-- Textos de la parte de acerca de:  -->
    <string name="camponombredev">Desarrollador: Juan David Gafaro Garcia</string>
    <string name="descripcion_dev">Mucho gusto para mí fue un placer llevar a cabo el desarrollo
    de este grandioso proyecto de android.
    Se planteo desarrollar una app que estuviera enfocada a dar a conocer algunos de los pueblos aledaños
    dando a conocer sus partes mas llamativas para futuros turistas; pues con ello se tendra un contexto
    mas claro acerca del lugar el cual se va a visitar, obteniendo datos claves para disfrutar este momento
    de la mejor manera.</string>
    <string name="set_contacto">Si te interesa contratar mis servicios lo puedes haces a travez de:
    Correo: davidGG123@gmail.com
    Celular: 3225297564
    </string>


    <!-- Textos del componente de hoteles:  -->
    <string name="nomHotel">LAS GALAXIAS</string>
    <string name="precioHotel">Precio: 70.000</string>

    <!-- Textos del componente de restaurantes:  -->
    <string name="nomRestaurante">SABOR DE PUEBLO</string>
    <string name="nomPlato">Arroz con pollo</string>
    <string name="restPrecio">Precio: 7.000</string>

    <!-- Textos del componente de sitios:  -->
    <string name="nomSitio">PUEBLO VIEJO</string>
    <string name="telSitio">Telefono: 3224256321</string>
    <string name="sitioPrecio">Precio: 20.000</string>



    <!-- Array de textos de lista de hoteles:  -->
    <string-array name="ArrayNombreHoteles">
        <item name="hNombre1">HOTEL El BUEN DORMIR</item>
        <item name="hNombre2">HOTEL LAS GALAXIAS</item>
        <item name="hNombre3">HOTEL LAS ESTRELLAS</item>
        <item name="hNombre4">HOTEL EL ENANO</item>
        <item name="hNombre5">HOTEL LA ESQUINA</item>

    </string-array>

    <string-array name="ArrayPreciosHoteles">
        <item name="hPrecio1">50.000</item>
        <item name="hPrecio2">48.6000</item>
        <item name="hPrecio3">19.9200</item>
        <item name="hPrecio4">45.800</item>
        <item name="hPrecio5">89.000</item>
    </string-array>


    <!-- Array de textos de lista de restaurantes:  -->
    <string-array name="ArrayNombresRestaurantes">
        <item name="rNombre1">LA SAZÓN DE MAMÁ</item>
        <item name="rNombre2">El CARBON</item>
        <item name="rNombre3">EL CORRAL</item>
        <item name="rNombre4">El KABRITO</item>
        <item name="rNombre5">LA PEPITORIA</item>
    </string-array>

    <string-array name="ArrayNombresPLatosRestaurantes">
        <item name="rNombre1">Arroz con pollo</item>
        <item name="rNombre2">Costillas BBQ</item>
        <item name="rNombre3">Hamburguesas</item>
        <item name="rNombre4">Kabro Sudado</item>
        <item name="rNombre5">Pescado</item>
    </string-array>

    <string-array name="ArrayPreciosRestaurantes">
        <item name="rPrecio1">14.500</item>
        <item name="rPrecio2">35.500</item>
        <item name="rPrecio3">12.500</item>
        <item name="rPrecio4">20.500</item>
        <item name="rPrecio5">14.500</item>
    </string-array>


    <!-- Array de textos de lista de sitios:  -->
    <string-array name="ArrayNombresSitios">
        <item name="sNombre1">PUEBLO VIEJO</item>
        <item name="sNombre2">LA LAGUNA</item>
        <item name="sNombre3">LA FINCA</item>
        <item name="sNombre4">EL JARDIN</item>
        <item name="sNombre5">EL SALON DE LA ARTES</item>
    </string-array>

    <string-array name="ArrayTelefonosSitios">
        <item name="sTelefono1">3024578564</item>
        <item name="sTelefono2">3024578888</item>
        <item name="sTelefono3">3024578004</item>
        <item name="sTelefono4">3024578564</item>
        <item name="sTelefono5">3024578774</item>
    </string-array>

    <string-array name="ArrayPreciosSitios">
        <item name="sPrecio1">12.000</item>
        <item name="sPrecio2">5.500</item>
        <item name="sPrecio3">9.500</item>
        <item name="sPrecio4">22.500</item>
        <item name="sPrecio5">14.500</item>
    </string-array>

</resources>