<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imagehotel"
    tools:context=".Hoteles">

    <TextView
        android:id="@+id/titulohomehoteles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/titulo_hoteles"
        app:layout_constraintVertical_bias="0.05"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24dp" />

    <TextView

        android:id="@+id/textHoteles"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/descripcionHoteles"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.2"
        android:layout_marginHorizontal="10dp"/>



    <ImageView
        android:id="@+id/iconohoteles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/botones"
        app:layout_constraintTop_toBottomOf="@id/textHoteles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/botonvermashoteles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#95a532"
        android:text="@string/btn_verMas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconohoteles"
        app:layout_constraintVertical_bias="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>