<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/fotositio"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/sitio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/nombresitio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.04"
        app:layout_constraintTop_toBottomOf="@id/fotositio"
        android:text="@string/nomSitio"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:layout_marginHorizontal="15dp"
        />


    <TextView
        android:id="@+id/celsitio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.04"
        app:layout_constraintTop_toBottomOf="@id/nombresitio"
        android:text="@string/telSitio"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:layout_marginHorizontal="15dp"
        />

    <TextView
        android:id="@+id/preciositio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.07"
        app:layout_constraintTop_toBottomOf="@id/celsitio"
        android:text="@string/sitioPrecio"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:layout_marginHorizontal="15dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>