<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".Home">

    <TextView
        android:id="@+id/titulo"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_pueblo"
        android:textAlignment="center"
        android:textSize="24dp"
        android:textColor="#000"
        android:textStyle="bold" />

    <Button
        android:id="@+id/botonHoteles"
        android:text="@string/bt_hoteles"
        android:textColor="#000"
        android:textSize="22dp"
        android:padding="10dp"
        android:background="@drawable/botonredondo"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/botonRestaurantes"
        android:text="@string/bt_restaurantes"
        android:textColor="#000"
        android:textSize="22dp"
        android:padding="10dp"
        android:background="@drawable/botonredondo"
        app:layout_constraintTop_toBottomOf="@id/botonHoteles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/botonSitios"
        android:text="@string/bt_sitios"
        android:textColor="#000"
        android:textSize="22dp"
        android:padding="10dp"
        android:background="@drawable/botonredondo"
        app:layout_constraintTop_toBottomOf="@id/botonRestaurantes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <ImageView

        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/parq"

        app:layout_constraintVertical_bias="0.15"
        />

    <ImageView

        android:id="@+id/silueta"
        android:layout_width="wrap_content"
        android:layout_height="207dp"
        android:background="@color/teal_200"

        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/pajaros"

        app:layout_constraintVertical_bias="1.0"
        />

</androidx.constraintlayout.widget.ConstraintLayout>