<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/titulorestaurante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.04"
        android:text="@string/nomRestaurante"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:layout_marginHorizontal="15dp"
        />
    <ImageView
        android:adjustViewBounds="true"
        android:id="@+id/fotorestaurante"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toBottomOf="@id/titulorestaurante"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/restaurante"
        app:layout_constraintVertical_bias="0.07"
        android:layout_marginHorizontal="1dp"
        />

    <TextView
        android:id="@+id/mejorplato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fotorestaurante"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:text="@string/nomPlato"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:layout_marginHorizontal="15dp"
        />
    <TextView
        android:id="@+id/precioplato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mejorplato"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:text="@string/restPrecio"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:layout_marginHorizontal="15dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>