<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcercaDe"
    android:background="@drawable/fondoacercad">

    <ImageView

        android:id="@+id/avatar"
        android:layout_width="220dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/avatar"

        app:layout_constraintVertical_bias="0.07"

        />

    <TextView
        android:id="@+id/nombre_dev"
        app:layout_constraintVertical_bias="0.37"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camponombredev"
        android:textAlignment="center"
        android:textSize="24dp"
        android:textColor="@color/aqua"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/descripcion"
        app:layout_constraintVertical_bias="0.80"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcion_dev"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="@color/floralwhite"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/contacto"
        app:layout_constraintVertical_bias="0.98"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_contacto"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>